# printautomation

./: .gitignore  deploy-ubuntu.sh  render.yaml  run_server.bat
client/: CMakeLists.txt  README.md  build_installer.bat  forge.config.js  installer.iss  main.js  package-lock.json  package.json  preload.js  webpack.config.js
client/src/: App.css  App.jsx  ConfigDialog.cpp  ConfigDialog.h  JobMonitor.cpp  JobMonitor.h  MainWindow.cpp  MainWindow.h  OfflineStorage.cpp  OfflineStorage.h  PrintManager.cpp  PrintManager.h  ServerClient.cpp  ServerClient.h  index.html  main.cpp
client/src/components/: CostCalculator.jsx  Dashboard.jsx  FieryConfig.jsx  Notification.jsx  PrintPreview.jsx  ReceiptForm.jsx  Settings.jsx  SetupWizard.jsx  ThemeToggle.jsx
client/src/utils/: storage.js
server/: Dockerfile  config.py  database.py  generate_certs.sh  generate_receipt_template.py  load_balancer.py  main.py  models.py  nginx.conf  printautomation.db  render.yaml  requirements.txt  schemas.py  start_server.bat  tasks.py  test_import.py
server/debian/: control  postinst
server/web/: index.html  script.js  style.css
